--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <%= render 'common/navbar' %>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
