Add Variables to Translations

--- a/app/views/api/v1/photos/index.html.erb
+++ b/app/views/api/v1/photos/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Photos</h1>
+<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0"><%= t('.title') %></h1>
 
 <hr class="mt-2 mb-5">
 
