--- a/app/views/api/v1/albums/index.html.erb
+++ b/app/views/api/v1/albums/index.html.erb
@@ -1,14 +1,14 @@
-<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Albums</h1>
+<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0"><%= t('.title_page') %></h1>
 
 <hr class="mt-2 mb-5">
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Id</th>
-      <th>User Id</th>
-      <th>Title</th>
-      <th>Photos</th>
+      <th><%= t('.id') %></th>
+      <th><%= t('.user') %> Id</th>
+      <th><%= t('.title') %></th>
+      <th><%= t('.photos') %></th>
     </tr>
   </thead>
 
@@ -18,7 +18,7 @@
         <td><%= album["id"] %></td>
         <td><%= album["userId"] %></td>
         <td><%= album["title"] %></td>
-        <td><%= link_to 'Show', api_v1_album_path(album["id"]) %></td>
+        <td><%= link_to t(:show), api_v1_album_path(album["id"]) %></td>
       </tr>
     <% end %>
   </tbody>
