--- a/app/views/api/v1/posts/show.html.erb
+++ b/app/views/api/v1/posts/show.html.erb
@@ -6,14 +6,14 @@
 
 <%= form_tag api_v1_post_path, method: :get do %>
   <div class="input-group mb-3">
-    <%= text_field_tag :comment_name, nil, class: 'form-control', placeholder: "Filter comments by name"%>
+    <%= text_field_tag :comment_name, nil, class: 'form-control', placeholder: t('.message_filter') %>
     <div class="input-group-append">
-      <%= submit_tag 'Filter', class: 'btn btn-outline-secondary' %>
+      <%= submit_tag t('.btn_filter'), class: 'btn btn-outline-secondary' %>
     </div>
   </div>
 <% end %>
 
-<%= link_to 'Clear filter', api_v1_post_path(@post["id"]), class: 'btn btn-secondary btn-sm float-right' %>
+<%= link_to t('.btn_clear_filter'), api_v1_post_path(@post["id"]), class: 'btn btn-secondary btn-sm float-right' %>
 
 <% @comments.each do |comment| %>
   <div class="media mb-4">
