--- a/app/views/api/v1/users/index.html.erb
+++ b/app/views/api/v1/users/index.html.erb
@@ -1,16 +1,16 @@
-<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0">Users</h1>
+<h1 class="font-weight-light text-center text-lg-left mt-4 mb-0"><%= t('.title') %></h1>
 
 <hr class="mt-2 mb-5">
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Username</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Website</th>
-      <th>Albums</th>
+      <th><%= t('.name') %></th>
+      <th><%= t('.username') %></th>
+      <th><%= t('.email') %></th>
+      <th><%= t('.phone') %></th>
+      <th><%= t('.website') %></th>
+      <th><%= t('.albums') %></th>
     </tr>
   </thead>
 
@@ -22,7 +22,7 @@
         <td><%= user["email"] %></td>
         <td><%= user["phone"] %></td>
         <td><%= link_to user["website"], "http://#{user["website"]}", target: "_blank" %></td>
-        <td><%= link_to 'Show', api_v1_album_by_user_path(user["id"]) %></td>
+        <td><%= link_to t(:show), api_v1_album_by_user_path(user["id"]) %></td>
       </tr>
     <% end %>
   </tbody>
