--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,24 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark box-shadow">
-  <%= link_to Wchallenge, root_path, class: 'navbar-brand' %>
+  <%= link_to t('.brand'), root_path, class: 'navbar-brand' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <%= link_to 'Home', root_path, class: 'nav-link' %>
+        <%= link_to t('.home'), root_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'Users', api_v1_users_path, class: 'nav-link' %>
+        <%= link_to t('.users'), api_v1_users_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'Albums', api_v1_albums_path, class: 'nav-link' %>
+        <%= link_to t('.albums'), api_v1_albums_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'Photos', api_v1_photos_path, class: 'nav-link' %>
+        <%= link_to t('.photos'), api_v1_photos_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'Posts', api_v1_posts_path, class: 'nav-link' %>
+        <%= link_to t('.posts'), api_v1_posts_path, class: 'nav-link' %>
       </li>
     </ul>
   </div>
